package org.example.bank;

import org.example.bank.auth.LoginService;
import org.example.bank.auth.User;
import org.example.bank.concurrency.BankEngine;
import org.example.bank.concurrency.Worker;
import org.example.bank.dao.AccountDAO;
import org.example.bank.dao.TransactionDAO;
import org.example.bank.model.Account;
import org.example.bank.transactions.DepositTransaction;
import org.example.bank.transactions.WithdrawTransaction;
import org.example.bank.transactions.TransferTransaction;
import org.example.bank.transactions.Transaction;

import java.util.List;
import java.util.Scanner;

public class Main {

    public static void main(String[] args) {

        System.out.println("=== Bank Transaction Simulator ===");

        Scanner scanner = new Scanner(System.in);
        LoginService loginService = new LoginService();
        AccountDAO accountDAO = new AccountDAO();
        TransactionDAO transactionDAO = new TransactionDAO();

        // ================= LOGIN =================
        System.out.print("Username: ");
        String username = scanner.nextLine();

        System.out.print("Password: ");
        String password = scanner.nextLine();

        User user = loginService.login(username, password);

        if (user == null) {
            System.out.println("❌ Login failed!");
            return;
        }

        System.out.println("✅ Login successful!");
        System.out.println("Welcome " + user.getUsername()
                + " (" + user.getRole() + ")");

        // ================= START ENGINE & WORKERS =================
        BankEngine engine = new BankEngine();

        Worker[] workers = new Worker[3];
        for (int i = 0; i < workers.length; i++) {
            workers[i] = new Worker(engine, i + 1);
            workers[i].start();
        }

        boolean running = true;

        // ================= MENU LOOP =================
        while (running) {

            // Reload fresh account data
            List<Account> userAccounts = accountDAO.findByUserId(user.getId());

            if (userAccounts.isEmpty()) {
                System.out.println("You have no accounts.");
                break;
            }

            System.out.println("\nYour accounts:");
            for (Account acc : userAccounts) {
                System.out.println("Account " + acc.getAccountRef()
                        + " | Balance = " + acc.getBalance());
            }

            System.out.println("\nChoose an option:");
            System.out.println("1. Deposit");
            System.out.println("2. Withdraw");
            System.out.println("3. Transfer");
            System.out.println("4. Show transaction history");
            System.out.println("5. Exit");
            System.out.print("Your choice: ");

            int choice = Integer.parseInt(scanner.nextLine());

            // ========== EXIT ==========
            if (choice == 5) {
                running = false;
                break;
            }

            // ========== HISTORY ==========
            if (choice == 4) {
                System.out.print("Enter account reference: ");
                String ref = scanner.nextLine();

                List<String> history =
                        transactionDAO.findHistoryByAccountRef(ref);

                if (history.isEmpty()) {
                    System.out.println("No transactions found.");
                } else {
                    System.out.println("\n--- Transaction History for " + ref + " ---");
                    history.forEach(System.out::println);
                }
                continue;
            }

            // ========== SOURCE ACCOUNT ==========
            System.out.print("Choose source account reference: ");
            String fromRef = scanner.nextLine();

            Account fromAccount = null;
            for (Account acc : userAccounts) {
                if (acc.getAccountRef().equals(fromRef)) {
                    fromAccount = acc;
                    break;
                }
            }

            if (fromAccount == null) {
                System.out.println("❌ Invalid source account.");
                continue;
            }

            Account toAccount = null;

            // ========== TARGET ACCOUNT (TRANSFER) ==========
            if (choice == 3) {
                System.out.print("Choose target account reference: ");
                String toRef = scanner.nextLine();

                toAccount = accountDAO.findByAccountRef(toRef);

                if (toAccount == null) {
                    System.out.println("❌ Target account not found.");
                    continue;
                }

                if (toAccount.getAccountRef().equals(fromAccount.getAccountRef())) {
                    System.out.println("❌ Cannot transfer to the same account.");
                    continue;
                }
            }

            // ========== AMOUNT ==========
            System.out.print("Amount: ");
            double amount = Double.parseDouble(scanner.nextLine());

            Transaction transaction;

            if (choice == 1) {
                transaction = new DepositTransaction(fromAccount, amount);
            } else if (choice == 2) {
                transaction = new WithdrawTransaction(fromAccount, amount);
            } else if (choice == 3) {
                transaction = new TransferTransaction(fromAccount, toAccount, amount);
            } else {
                System.out.println("❌ Invalid choice.");
                continue;
            }

            // ========== SUBMIT ==========
            engine.submit(transaction);
            System.out.println("🕒 Transaction submitted, processing...");

            // Small pause → cleaner console output (UI only)
            try {
                Thread.sleep(300);
            } catch (InterruptedException ignored) {}
        }

        // ================= SHUTDOWN =================
        shutdownWorkers(workers);
        System.out.println("Application finished.");
    }

    // ================= CLEAN SHUTDOWN =================
    private static void shutdownWorkers(Worker[] workers) {
        System.out.println("\nShutting down workers...");
        for (Worker w : workers) {
            w.shutdown();
        }
        for (Worker w : workers) {
            try {
                w.join();
            } catch (InterruptedException e) {
                e.printStackTrace();
            }
        }
    }
}
